app/assets/stylesheets/scaffolds.scss
body {
  background-color: #fff;
  color: #333;
  margin: 33px;
  font-family: verdana, arial, helvetica, sans-serif;
  font-size: 13px;
  line-height: 18px;
}

p, ol, ul, td {
  font-family: verdana, arial, helvetica, sans-serif;
  font-size: 13px;
  line-height: 18px;
}

pre {
  background-color: #eee;
  padding: 10px;
  font-size: 11px;
}

a {
  color: #000;

  &:visited {
    color: #666;
  }

  &:hover {
    color: #fff;
    background-color: #000;
  }
}

th {
  padding-bottom: 5px;
}

td {
  padding: 0 5px 7px;
  border-color: transparent !important;
  border-width: thick !important;
  margin: 5px !important;
}

div {
  &.field, &.actions {
    margin-bottom: 10px;
  }
}

#notice {
  color: green;
}

.field_with_errors {
  padding: 2px;
  background-color: red;
  display: table;
}

#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px 7px 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;

  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12px;
    margin: -7px -7px 0;
    background-color: #c00;
    color: #fff;
  }

  ul li {
    font-size: 12px;
    list-style: square;
  }
}

label {
  display: block;
}
.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
  background: #f0c699 !important;
  color : black !important;
  border-color: #4d3518 !important;
  border-width: medium !important;
}

.navbar-inverse {
  background: #e4a86c !important;
  border-color: #e4a86c !important;
}

.navbar-home {
  font-size: large !important;
  align-content: center !important;
  alignment: center !important;
  align-self: center !important;
  color: white !important;
  margin-top: 5px !important;
  text-decoration-color: white !important;
}


td {
  border-color: transparent !important;
  border-width: thick !important;
  margin: 5px !important;
}

